--- a/front-end/index.html
+++ b/front-end/index.html
@@ -13,15 +13,18 @@
         <h3 class="mb-5">Cadastre-se</h3>
         <form id="signupForm" class="w-100">
             <div class="mb-2">
+                <input type="text" id="nome" class="form-control" placeholder="nome" required>
+            </div>
+            <div class="mb-2">
                 <input type="text" id="email" class="form-control" placeholder="E-mail" required>
             </div>
             <div class="mb-2">
-                <input type="password" id="password" class="form-control" placeholder="Senha" required>
+                <input type="text" id="password" class="form-control" placeholder="Senha" required>
             </div>
-            <button type="submit" class="btn btn-primary w-100">Cadastrar</button>
+            <button type="submit" id="creaat-note" class="btn btn-primary w-100">Cadastrar</button>
         </form>
     </div>
 
-    <script src=".js"></script>
+    <script src="public/js/login.js"></script>
 </body>
 </html>
