criada a função de abrir editor para atualização dos dados de qualquer nota; ajustado o PATCH no backend para rodar a atualização dos dados no front. Postman e Front-end agora conseguem realizar a atualização

--- a/front-end/home.html
+++ b/front-end/home.html
@@ -14,10 +14,10 @@
         <div id="creat-note-container" class="mb-5">
             <form id="note-form" class="w-100">
                 <div class="mb-2">
-                    <input type="text" name="titulo" id="note-title" class="form-control" placeholder="Seu título aqui...">
+                    <input type="text" name="titulo" id="note-title" class="form-control" placeholder="Título aqui...">
                 </div>
                 <div class="mb-2">
-                    <textarea name="conteudo" id="note-content"  rows="6" cols="50" placeholder="conteúdo da nota aqui..." class="form-control"></textarea>
+                    <textarea name="conteudo" id="note-content"  rows="6" cols="50" placeholder="Criar minha nota..." class="form-control"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary w-100">Criar nota</button>
             </form>
