--- a/front-end/home.html
+++ b/front-end/home.html
@@ -22,7 +22,7 @@
                     <li><a href="#">ToDo</a></li>
                     <li><a href="#">Calendar</a></li>
                     <li><a href="#">Planner</a></li>
-                    <li><a href="#"><img src="https://img.icons8.com/?size=100&id=98957&format=png&color=000000" alt=""></a></li>
+                    <li id="user-button"><a href="#"><img src="https://img.icons8.com/?size=100&id=98957&format=png&color=000000" alt=""></a></li>
                 </ul>
             </nav>
         </div>
@@ -41,7 +41,7 @@
                     <input type="text" name="" id="search-note" placeholder="Search for...">
                     <img class="search-icon" src="https://img.icons8.com/?size=100&id=59878&format=png&color=000000" alt="">
                 </div>
-                <button class="create-note"><img src="https://img.icons8.com/?size=100&id=zqRKVWtC1VeY&format=png&color=000000" alt=""></button>
+                <button class="create-note" id="create-note"><img src="https://img.icons8.com/?size=100&id=zqRKVWtC1VeY&format=png&color=000000" alt=""></button>
             </div>
             <div class="notes-list">
                 <ul>
@@ -52,7 +52,7 @@
 
         <!--Container direito, onde vão os dados das notas selecionadas-->
         <div class="note-content">
-            <div class="note-banner"><div class="note-icon"></div></div>
+            <div class="note-banner"></div>
             <div class="note-text-content">
                 <div class="content-centralize">
                     <div class="title-note"><input type="text" placeholder="Título aqui..."></div>
@@ -69,8 +69,13 @@
             </div>
         </div>
     </div>
-    
+
     <!--Scripts-->
+    <script type="module" src="assets/js/main.js"></script>
+
+
+
+
     <script>
         function execCmd(command) {
             document.execCommand(command, false, null);
