--- a/front-end/index.html
+++ b/front-end/index.html
@@ -5,26 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="public/css/style.css">
-    <link rel="stylesheet" href="public/css/sigin.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/sigin.css">
 </head>
 <body>
     <div id="signup-container" class="container d-flex flex-column justify-content-center align-items-center">
-        <h3 class="mb-5">Cadastre-se</h3>
-        <form id="signupForm" class="w-100">
-            <div class="mb-2">
-                <input type="text" id="nome" class="form-control" placeholder="nome" required>
-            </div>
+        <h3 class="mb-5">Entrar</h3>
+        <form id="loginForm" class="w-100">
             <div class="mb-2">
                 <input type="text" id="email" class="form-control" placeholder="E-mail" required>
             </div>
             <div class="mb-2">
-                <input type="text" id="password" class="form-control" placeholder="Senha" required>
+                <input type="text" id="senha" class="form-control" placeholder="Senha" required>
             </div>
-            <button type="submit" id="creaat-note" class="btn btn-primary w-100">Cadastrar</button>
+            <a href="trusth.html">esqueci minha senha</a>
+            <button type="submit" id="login" class="btn btn-primary w-100">Cadastrar</button>
+            <p id="mensagem" style="color: red;"></p>
         </form>
     </div>
 
     <script src="public/js/login.js"></script>
+    <script>
+        const form = document.getElementById('loginForm');
+        const mensagem = document.getElementById('mensagem');
+
+        form.addEventListener('submit', async (e) => {
+        e.preventDefault();
+
+        const email = document.getElementById('email').value;
+        const senha = document.getElementById('senha').value;
+
+        try {
+            const res = await fetch('http://168.75.102.51:3000/api/login');
+            const usuarios = await res.json();
+
+            const usuarioValido = usuarios.find(user =>
+            user.email === email && user.senha_hash === senha
+            );
+
+            if (usuarioValido) {
+            // Redireciona para outra página (ex: dashboard.html)
+            window.location.href = 'home.html';
+            } else {
+            mensagem.textContent = 'Email ou senha inválidos';
+            }
+
+        } catch (err) {
+            console.error('Erro ao fazer login:', err);
+            mensagem.textContent = 'Erro na conexão com o servidor';
+        }
+        });
+    </script>
 </body>
 </html>
